openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phone-selector-service
  labels:
    app: phone-selector
spec:
  type: ClusterIP
  ports:
    - port: 8050
      targetPort: 8050
      protocol: TCP
      name: http
  selector:
    app: phone-selector
