openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: phone-selector-route
  labels:
    app: phone-selector
spec:
  to:
    kind: Service
    name: phone-selector-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
